--- a/singly_linkedlist/.project
+++ b/singly_linkedlist/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>kahoot_challange_march_15</name>
+	<name>singly_linkedlist</name>
 	<comment></comment>
 	<projects>
 	</projects>
